--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @import "../css/reset.css";
 .website-background {
-  background-image: url(../img/bg.webp);
+  background-image: url(../img/bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   padding-top: 64px;
