--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,5 +1,5 @@
 .website-background {
-  background-image: url(../img/bg.jpg);
+  background-image: url(../img/bg.webp);
   background-size: cover;
   background-repeat: no-repeat;
   padding-top: 64px;
